# 5p27_NEW

Client/: CMakeLists.txt  CMakeLists.txt.user.51d40d0.22  client.cpp  client.h  client.ui  groupData.h  qcustomplot.h  zstd.h
Server/: CMakeLists.txt  CMakeLists.txt.user.1ed9674  CMakeLists.txt.user.a39497f  CMakeLists.txt.user.c232dbe  README.md  definesMil.h  dspapiviod.cpp  dspapiviod.h  executor.cpp  executor.h  fpga_regs.h  hard.json  main.cpp  openapiviod.cpp  openapiviod.h  protocol.h  viodImit.cpp  viodImit.h
Server/farbos/: proto.h  ts.h
Server/lib/: CMakeLists.txt  core.cpp  core.h  libdspapi.cpp  libdspapi.h
Server/libViod/: libdspapidata.h
